# nautobot-docker-compose

./: .dockerignore  .env.example  .gitignore  .travis.yml  .yamllint.yml  DRYRUN_run_design_jobs.py  Dockerfile-LDAP  README.md  create_ssl_cert.md  docker-compos.ldap.yml  docker-compose.ldap.yml  docker-compose.mysql.yml  docker-compose.override.yml  docker-compose.yml  invoke.example.yml  invoke.ldap.yml  invoke.mysql.yml  local.env.example  nginx.conf  pyproject.toml  run_design_jobs.py  sync_jobs_repo.py  tasks.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  update-nautobot.yml
config/: nautobot_config.py  nautobot_config.py.ldap
docs/: create_ssl_cert.md  ldap.md  plugins.md
docs/img/: generate_container_stack.py
environments/: Dockerfile  Dockerfile-LDAP  creds.example.env  docker-compose.base.yml  docker-compose.ldap.yml  docker-compose.local.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  local.example.env
examples/: docker-compose.override.yml
jobs/: __init__.py
jobs/initial_data/: __init__.py
jobs/initial_data/context/: __init__.py
jobs/initial_data/designs/: 0001_design.yaml.j2
patches/nautobot_ui_plugin/: template_content.py
patches/nautobot_ui_plugin/templates/nautobot_ui_plugin/: device_effective_eox.html
plugin_example/: Dockerfile-Plugins  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  plugin_requirements.txt
plugins/plugin_example/: pyproject.toml
plugins/plugin_example/nautobot_example_plugin/: __init__.py
tests/: test_jobs.py
