[tool.poetry]
name = "nautobot-docker-compose"
version = "0.1.2"
description = "Docker Compose files used to build Nautobot containers"
authors = ["Network to Code, LLC <info@networktocode.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.13"
nautobot = "2.4.6"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}


[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
