[tool.poetry]
name = "nautobot-docker-compose"
version = "0.2.0"
description = "Docker Compose files used to build Nautobot containers"
authors = ["Network to Code, LLC <info@networktocode.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
nautobot = "3.0.8"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}

[tool.poetry.group.dev.dependencies]
invoke = "*"
toml = "*"
pillow = "^12.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
